--- a/music/public/index.html
+++ b/music/public/index.html
@@ -30,6 +30,7 @@
         margin: 0;
         padding: 0;
         width: 100%;
+        color: white;
         min-height: 100vh;
         background-color: rgb(2,0,36);
       }
